--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         <div class="welcome-container">
             <div class="Imageas">
                 <h1 class="heading-secondary">Welcome to <span class="lg">MangaLook</span></h1>
-                <img class="imgg" src="/assets/Image/pngwing.com.png" alt="JJK Image">
+                <img class="imgg" src="https://icon2.cleanpng.com/20180322/ytq/kisspng-leaf-logo-green-leaves-5ab4681e63d881.753254501521772574409.jpg" alt="JJK Image">
             </div>
         </div>
     </div>
