--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         <div class="welcome-container">
             <div class="Imageas">
                 <h1 class="heading-secondary">Welcome to <span class="lg">MangaLook</span></h1>
-                <img class="imgg" src="https://static.vecteezy.com/system/resources/previews/006/954/129/original/green-leaf-logo-free-vector.jpg" alt="JJK Image">
+                <img class="imgg" src="https://i.pinimg.com/564x/1d/ad/a2/1dada2e74cb2fdc63144b9be5fae8df6.jpg" alt="JJK Image">
             </div>
         </div>
     </div>
