--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,8 @@
 
         <div class="welcome-container">
             <div class="Imageas">
-                <h1 class="heading-secondary">Welcome to <span class="lg">MangaLook</span></h1>
+                <h1 class="heading-secondary">Welcome to <span class="lg">MangaLook<i class="fa-solid fa-leaf"></i></span></h1>
+                <!-- <img class="imgg" src="" alt="JJK Image"> -->
             </div>
         </div>
     </div>
