--- a/public/main.html
+++ b/public/main.html
@@ -10,7 +10,7 @@
   <body>
     <nav>
       <div class="logo">
-        <img src="/assets/Image/png-transparent-leaf-logo-green-leaves-green-and-teal-leaf-logo-text-maple-leaf-grass-thumbnail.png" alt="logo" />
+        <i class="fa-solid fa-leaf">
         <h1>MangaLook</h1>
       </div>
       <ul>
