--- a/public/main.html
+++ b/public/main.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Dashboard MangaLook</title>
+    <title>MangaLook</title>
     <link rel="stylesheet" type="text/css" target="_blank" href="mainstyle.css" />
   </head>
   <body>
     <nav>
       <div class="logo">
-        <i class="fa-solid fa-leaf">
+        <img src="/assets/Image/png-transparent-leaf-logo-green-leaves-green-and-teal-leaf-logo-text-maple-leaf-grass-thumbnail.png" alt="logo" />
         <h1>MangaLook</h1>
       </div>
       <ul>
