--- a/public/main.html
+++ b/public/main.html
@@ -10,7 +10,7 @@
   <body>
     <nav>
       <div class="logo">
-        <img src="https://static.vecteezy.com/system/resources/previews/006/954/129/original/green-leaf-logo-free-vector.jpg" alt="logo" />
+        <img src="https://static.vecteezy.com/system/resources/previews/006/954/129/original/green-leaf-logo-free-vector.jpg" alt="logo" width="200px"/>
         <h1>MangaLook</h1>
       </div>
       <ul>
