--- a/public/main.html
+++ b/public/main.html
@@ -10,7 +10,7 @@
   <body>
     <nav>
       <div class="logo">
-        <img src="https://static.vecteezy.com/system/resources/previews/006/954/129/original/green-leaf-logo-free-vector.jpg" alt="logo" width="200px"/>
+        <img src="png-transparent-leaf-logo-green-leaves-green-and-teal-leaf-logo-text-maple-leaf-grass-thumbnail.png" alt="logo" />
         <h1>MangaLook</h1>
       </div>
       <ul>
