--- a/public/signup.html
+++ b/public/signup.html
@@ -58,8 +58,8 @@
 
         <div class="welcome-container">
             <div class="Imageas">
-                <h1 class="heading-secondary">Welcome to <span class="lg">MangaLook</span></h1>
-                <img class="imgg" src="/assets/Image/pngwing.com.png" alt="JJK Image">
+                <h1 class="heading-secondary">Welcome to <span class="lg">MangaLook<i class="fa-solid fa-leaf"></i></span></h1>
+                <!-- <img class="imgg" src="/assets/Image/pngwing.com.png" alt="JJK Image"> -->
             </div>
         </div>
     </div>
